[package]
name = "calc-pcr4"
version = "0.1.0"
edition = "2021"

[dependencies]
authenticode = { version = "0.4.3", features = ["object"] }
clap = { version = "4.5.11", features = ["derive"] }
digest = "0.10.7"
fallible-iterator = "0.2.0"
hex = "0.4.3"
libc = "0.2.155"
object = "0.36.2"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "1.0.63"
typed-path = "0.9.1"
uefi-eventlog = { git = "https://github.com/slonkazoid/uefi-eventlog-rs.git", rev = "a49027dc8eb7fcf09f7b797e08dbaa24d36dfc55" }
uuid = "1.10.0"
